# minifel

./: .gitignore  .gitmodules  README.md  data_collector.py  main.py  native_tasks.py  solver.py  user.py
data/: .gitignore
data/wangzy/: README.md
native_kernels/: CMakeLists.txt  lifeline_mapper.cc  lifeline_mapper.h  native_kernels.cc  native_kernels.h  native_kernels_helper.cc  native_kernels_helper.h  native_kernels_tasks.cc  native_kernels_tasks.h  native_kernels_tasks_gpu.cu  phaser_tasks.cc  phaser_tasks.h  phaser_tasks_gpu.cu  simple_mapper.cc  simple_mapper.h
scripts/: .gitignore  bsub_cpu.sh  bsub_gpu.sh  check_output.py  clean_build.sh  copy_data.sh  copy_small_data.sh  dirty_build.sh  dump_all_backtraces.sh  dump_node_backtraces.sh  pick_hcas.py  pick_hcas.sh  render.sh  run_cpu.sh  run_gpu.sh  sbatch_cpu.sh
setup/: .gitignore  build_from_scratch.sh  install_cupy.sh  install_phaseret.sh  install_pysingfel.sh  psana_clean_build.sh  psana_dirty_build.sh  rebuild_legion.sh  reconfigure_legion.sh
